<resources>
    <string name="app_name">Carros</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="nuevo">Nuevo Carro</string>
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>

    <string name="seleccione">-Seleccione un color-</string>
    <string name="rojo">Rojo</string>
    <string name="negro">Negro</string>
    <string name="blanco">Blanco</string>
    <string name="azul">Azul</string>
    <string name="amarillo">Amarillo</string>

    <string-array name="color_opc">
        <item>@string/seleccione</item>
        <item>@string/rojo</item>
        <item>@string/negro</item>
        <item>@string/blanco</item>
        <item>@string/azul</item>
        <item>@string/amarillo</item>
    </string-array>
    <string name="guardado">Guardado</string>
    <string name="color" translatable="false">Color</string>

    <string name="modificar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="errorColor">Seleccione un color</string>
    <string name="errorVacio">Ingrese un valor valido</string>

    <string name="titulo_eliminar_mensaje">Eliminar</string>
    <string name="eliminar_mensaje">¿Está seguro?</string>
    <string name="si_eliminar_mensaje" translatable="false">Si</string>
    <string name="no_eliminar_mensaje" translatable="false">No</string>
    <string name="error_editar">Esta placa ya se encuentra registrada</string>

</resources>
