<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:layout_height="300dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/img_foto_det"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_2"
                android:layout_width="match_parent"
                android:layout_height="65dp"></android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placa"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_placa_det"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAllCaps="true"
                android:textColor="@color/secondary_text" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/cardview_shadow_start_color" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_marca_det"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/cardview_shadow_start_color" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modelo"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_modelo_det"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/cardview_shadow_start_color" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_color_det"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/cardview_shadow_start_color" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/precio"
                android:textColor="@color/primary_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_precio_det"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menuFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="@color/shadown_color"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="@color/colorAccent"
        fab:menu_colorPressed="@color/colorAccent"
        fab:menu_colorRipple="@color/ripple_color"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/ic_expand_less"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"

        >

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_modificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="editar_Carro"
            android:src="@drawable/ic_edit"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_label="@string/modificar"
            fab:fab_size="mini"
            fab:srcCompat="@drawable/ic_edit" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="eliminar"
            android:src="@drawable/ic_delete"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorAccent"
            fab:fab_label="@string/eliminar"
            fab:fab_size="mini"
            fab:srcCompat="@drawable/ic_delete" />

    </com.github.clans.fab.FloatingActionMenu>
</android.support.design.widget.CoordinatorLayout>